--- a/每天都学一点点.md
+++ b/每天都学一点点.md
@@ -1,3 +1,43 @@
+#### web性能优化
+
+1. 减少http请求：合并css、js，合并图片（css sprites），图片多的时候用延迟加载lazyload（判断在视口中的位置，给img标签填充src属性，jquery有lazyload插件）
+
+2. 少操作dom，dom的变化（改变文字大小，窗口大小，内容改变，属性改变等）可能会让浏览器重新计算元素的宽高，会引起页面reflow也就是重新布局，过于频繁cpu使用就会上涨
+
+   通过设置class，包含有动画属性的元素是否可以采用absolute或者fixed的布局，少进行对dom的查询修改，尤其是少进行对dom的循环操作，总之就是减少reflow的影响范围。
+
+3. 用json进行数据交换：js的原生格式，轻量，相比xml的数据体积要小。处理json:eval()和json.parse()
+
+4. html的语义化，正确使用常用标签：css没有成功加载时呈现好的内容结构；利于SEO
+
+5. css选择器，从右向左匹配，!important标签、伪类，类型选择器
+
+6. CDN：网络各处都放置了节点服务器，根据网络流量、各节点负载，到用户的距离把用户的请求重定向到离用户最近的服务节点上。
+
+7. js和css压缩：减少文件体积
+
+对于子域不同的情况，可以用`document.domain`：
+
+http://A.com/a.html 请求 http://www.A.com/b.html 
+
+1.在各自的页面上设置：document.domain = 'A.com'
+
+2.a.html:`<iframe src = "http://www.A.com/b.html " onload = "foo()"></iframe>`
+
+foo()
+
+
+
+
+
+
+
+`SQL`注入：
+
+`select * from user where user_name='admin' and password='123456'; `
+
+`select * from user where user_name='admin' and password='1' or ‘1'='1'; `
+
 `null == undefined //true  因为undefined派生自null`
 
 `isNaN(NaN);  //true`
@@ -31,6 +71,8 @@ typeof foo;   //"function"
 
 6、Options 获取服务器支持的HTTP请求方法；用来检查服务器的性能。
 
+---
+
 
 
 同源：
@@ -43,3 +85,6 @@ http://a.com/b.js 同一域名，不同二级域名（同上） 不允许（cook
 ```
 
 需要去请求其他域的数据，如：调用不同业务的数据，而不同业务已子域区分；又或者是第三方公用的数据接口等等
+
+
+
