--- a/5.15.md
+++ b/5.15.md
@@ -1,3 +1,39 @@
+百度一面（问题不分先后）：
+
+1. 假如有一些class选择器，其中可能包括好几个项（比如第一个class=“box box1 box2”，第二个class='box'   ...），怎么选出class中包含固定一项的那个（比如找出class = "box box1" class=“box”都是符合的）
+
+   正确的思路是正则表达式，但是我当时不会就说用getAttribute(),然后对拿到的字符串做处理(比如在“box1 box box” 、“box1”、“box”中找出包含box子字符串的，面试官表示getAttribute()有兼容性问题）
+
+2. 有个button，点击后该按钮变成红色，如果想让这个过程持续2s（缓缓变成红色）要怎么做？
+
+   我说用css3的transition，面试官表示有兼容性问题，有没有别的办法。
+
+3. ```
+   x = 1;
+   function foo(){
+   	x = 2;
+   	alert(x);
+   }
+   foo();
+   x=3;
+   foo();
+   alert(x);
+   ```
+
+   我觉得面试官这个题其实是想考全局变量和变量提升的，但是写的这个比较简单，可多看看变量提升，还有变量提升里函数表达式和函数声明的提升。比如这个：http://www.jb51.net/article/90113.htm
+
+4. 1-100有100个数，从中随机拿出6个不一样的数
+
+   因为刚开始没听明白问题，扯到了数组去重，不能用set，于是临时又写了个数组去重
+
+5. 手写深拷贝（不记得原题目是啥，反正转换过来就相当于是写个深拷贝）
+
+6. web优化
+
+7. 怎么学习前端的
+
+8. ​
+
 一面：
 
 1. 盒模型，画图说明一下
