--- a/5.15.md
+++ b/5.15.md
@@ -26,8 +26,8 @@
 
 1. 介绍项目
    说了仿真的项目，问了具体实现的功能，遇到什么技术问题没，怎么解决的
-2. 计算机基础课都学过吧？用图画一下双向链表
-   说不会就没有再问别的了。。
+2. 计算机基础课都学过吧？用图表示双向链表
+   为啥我当时反应的是数据结构里的图。。大写的懵逼。。说不会就没有再问别的了。。
 3. css怎么样？（给个页面能写，但是感觉css精通挺难的）那比如给你一个这样的页面（给了一个瀑布流）要怎么布局？不用flex呢？
 4. 兼容性问题了解吗？
 5. web性能优化
